Updated new figures, added results to tables

--- a/main.tex
+++ b/main.tex
@@ -578,11 +578,17 @@ C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 \end{figure}
 
 \begin{figure}
-\caption{Comparison of the absorption spectra for the first 20 excitations obtained with
+\caption{Comparison of the absorption spectra the first 20 excitations of PAH obtained with
 pseudo-potentials (blue) and all-electron (red) calculations (def2-SV(P)/TD-PBE0). Peaks marked
 with * cannot be reproduced by the pseudo-potentials as they are $\sigma$ to $\sigma$ excitations.
 Excitation energies obtained with the pseudo-potentials were corrected by a factor 0.91.}
 \label{fig:cnhn_uv}
+\end{figure}
+
+\begin{figure}
+\caption{Comparison of the absorption and ECD spectra of the first 20 excitations of a series of helicene molecules obtained with pseudo-potentials (blue) and all-electron (red) calculations (def2-SV(P)/TD-PBE0). 
+Excitation energies obtained with the pseudo-potentials were corrected by a shift of 32nm.}
+\label{fig:helicene_spectra}
 \end{figure}
 
 \begin{figure}
@@ -707,18 +713,10 @@ J.\ Comput.\ Chem.
 \clearpage
 
 \begin{figure}
-\begin{tabular}{|c|c|}
-\hline
-\includegraphics[width=4cm]{pyrene_peak1_ref_white} &
-\includegraphics[width=4cm]{pyrene_peak1_ps_white} \\
-\includegraphics[width=4cm]{pyrene_peak2_ref_white} &
-\includegraphics[width=4cm]{pyrene_peak2_ps_white} \\
-\hline
-All-electron & Pseudo-potential\\
-\hline
-\end{tabular}\\
-\vspace{0.25in}
-\hspace*{3in}
+
+\begin{center}
+\includegraphics[angle=-90,width=8cm]{pbe0_grand_rpas}
+\end{center}
 {\Large
 \begin{minipage}[t]{3in}
 \baselineskip = .5\baselineskip
@@ -732,14 +730,39 @@ J.\ Comput.\ Chem.
 \clearpage
 
 \begin{figure}
-%\vspace*{1.1in}   %%% FIGURE 6
+\begin{center}
+\begin{tabular}{|c|c|}
+\hline
+\includegraphics[width=4cm]{pyrene_peak1_ref_white} &
+\includegraphics[width=4cm]{pyrene_peak1_ps_white} \\
+\includegraphics[width=4cm]{pyrene_peak2_ref_white} &
+\includegraphics[width=4cm]{pyrene_peak2_ps_white} \\
+\hline
+All-electron & Pseudo-potential\\
+\hline
+\end{tabular}\\
+\end{center}
+\vspace{0.25in}
+{\Large
+\begin{minipage}[t]{3in}
+\baselineskip = .5\baselineskip
+Figure 8 \\
+Alexander Punter, Paola Nava, Yannick Carissan\\
+J.\ Comput.\ Chem.
+\end{minipage}
+}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
 \begin{center}
 \includegraphics[width=8cm]{aim_c6h6.eps}
 \end{center}
 {\Large
 \begin{minipage}[t]{3in}
 \baselineskip = .5\baselineskip
-Figure 8 \\
+Figure 9 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
 J.\ Comput.\ Chem.
 \end{minipage}
