--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -166,11 +166,11 @@ and pseudo-systems.}
 
 \section*{Full Excited states analysis: singlet and triplet and RPA vs CIS}
 As can be seen from figures \ref{fig:cnhn_uv_rpas}, \ref{fig:cnhn_uv_rpat},
-\ref{fig:cnhn_uv_ciss} and \ref{fig:cnhn_uv_cist}, random phase approximation (RPA)
-and configuration interaction singles (CIS) lead to very similar spectra.
+\ref{fig:cnhn_uv_ciss} and \ref{fig:cnhn_uv_cist}, Random Phase Approximation (RPA)
+and Configuration Interaction Singles (CIS) lead to very similar spectra.
 Yet, RPA leads to a better agreement for the calculated intensities.
 However, it is worth noting that the decision to use or not the Tamm Dancoff approximation
-does not affect the overall good agrement between reference and pseudo-potential.
+does not affect the overall good agreement between reference and pseudo-potential.
 
 \section*{Triplet Instability}
 The correct treatment of electronic correlation is essential to recover the physics of the ground
@@ -239,6 +239,17 @@ framework.}
 pseudo-potentials (ps) and all-electron (ref) calculations (def2-SV(P)/TD-B3LYP) within the RPA
 framework. The wavelength is shifted by a factor of 1.15.}
 \label{fig:cnhn_uv_rpas}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[angle=-90,width=16cm]{b3lyp_grand_rpas}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+\caption{Comparison of the absorption spectra of the 20 first singlet excitations for a series of helicene molecules obtained with pseudo-potentials (ps) and all-electron (ref) calculations (def2-SV(P)/TD-B3LYP) within the RPA
+framework. The pseudo-molecule wavelength has been corrected by a 32nm shift.}
+\label{fig:helicene_spectra_b3lyp}
 \end{figure}
 
 \bibliography{biblio_pseudo_alex}
