--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -129,7 +129,26 @@ In earlier calculations with only \(s\) potentials, optimisation was performed b
 
 Once we started to look at excitation and ionisation energies however, optimisation became more complicated. Optimisations were at first performed of the $s$ and $p$ potentials to reach the HOMO energy of ethene as before. With the different potential variables available, we produced a range of optimised potential sets. The best set of these potentials was then chosen and the values altered by hand in order to match as closely as possible three separate reference values: the singlet HOMO energy, the singlet-triplet \(\pi-\pi^{*}\) excitation energy, and the cation-singlet energy. All optimisations used the Brent method in SciPy's optimisation library, with a tolerance of \(1.48*10^{-08}\), and used standard Hartree-Fock calculations.
 
-\section*{Comparison with Frozen Orbitals}
+\section*{Method Comparison: Frozen Orbitals}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=8cm]{froz_comp}
+\end{center}
+\caption{Comparison of CASSCF (ROHF) calculations for frozen-orbital and pseudo-molecule systems across a series of short chain alkenes.}
+\label{fig:froz_comp}
+\end{figure}
+
+\section*{Method Comparison: TDDFT and CASPT2}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=8cm]{methodcomp_s_excitations}
+\includegraphics[width=8cm]{methodcomp_t_excitations}
+\end{center}
+\caption{Comparison of all-electron and pseudo-molecules for TDDFT-PBE0 and CASPT2 methods across ethylene, benzene, naphthalene and anthracene systems.}
+\label{fig:method_comp}
+\end{figure}
 
 \section*{Comparison with our previous study}
 \begin{figure}
@@ -150,20 +169,6 @@ had to be placed exactly at the center of the C-C bond whereas in the current wo
 are placed at a position relative to the center of the pseudo system and do not involve
 the C-C distance (the bond direction is still used).
 
-\section*{Triplet Instability}
-The correct treatment of electronic correlation is essential to recover the physics of the ground
-and excited states of all-trans polyenes.\cite{paldus_bond_1983, houk_polyacene_2001, colvin_energies_1998, castano_instabilities_1982, ukrainsky_electronic_1972, sokolov_time-dependent_2017, nakayama_theoretical_1998}
-\begin{figure}
-\begin{center}
-\includegraphics[width=8cm]{long_pbe0_s2}
-\end{center}
-\caption{Comparison of $S^2$ expectation values obtained for the calculation
-of the first $\pi^*$ triplet configuration in a Hartree Fock formalism, for reference
-and pseudo-systems.}
-\label{fig:ssquare}
-\end{figure}
-
-
 \section*{Full Excited states analysis: singlet and triplet and RPA vs CIS}
 As can be seen from figures \ref{fig:cnhn_uv_rpas}, \ref{fig:cnhn_uv_rpat},
 \ref{fig:cnhn_uv_ciss} and \ref{fig:cnhn_uv_cist}, Random Phase Approximation (RPA)
@@ -176,6 +181,15 @@ does not affect the overall good agreement between reference and pseudo-potentia
 The correct treatment of electronic correlation is essential to recover the physics of the ground
 and excited states of all-trans-polyenes.\cite{paldus_bond_1983, houk_polyacene_2001, colvin_energies_1998, castano_instabilities_1982, ukrainsky_electronic_1972, sokolov_time-dependent_2017, nakayama_theoretical_1998}
 
+\begin{figure}
+\begin{center}
+\includegraphics[width=8cm]{long_pbe0_s2}
+\end{center}
+\caption{Comparison of $S^2$ expectation values obtained for the calculation
+of the first $\pi^*$ triplet configuration in a Hartree Fock formalism, for reference
+and pseudo-systems.}
+\label{fig:ssquare}
+\end{figure}
 
 \begin{figure}
 \begin{center}
