Changes for the frozen calculations

--- a/main.tex
+++ b/main.tex
@@ -298,9 +298,13 @@ but absolute errors are small (between 0.18 and 0.3 eV) and the pattern of incre
 ionisation energies are slightly higher than in reference calculations, even if tendencies are well-reproduced. 
 We recall here that this quantity is particularly challenging for our method, as we do not account for
 the reorganization of the $\sigma$ electrons in the cation.
-\textsl{AS A REFERENCE??:Errors are smaller than (but close to) those obtained by freezing in the cation calculations 
-all the orbitals but the SOMO, as they are obtained in the calculations for the neutral systems, see the Supplementary
-Information for details.}
+For comparison, the mean ionisation errors obtained with our pseudo-potentials are between 7\% (PBE0) and 11\% (TPSS) 
+and an average error of 10\% is found in ROHF calculations for the small-polyenes where all the $\sigma$ doubly-occupied 
+orbitals are frozen in the cations, as they are obtained in the calculations for the neutral systems
+(see the Supplementary Information for details). 
+%\textsl{AS A REFERENCE??:Errors are smaller than (but close to) those obtained by freezing in the cation calculations 
+%all the orbitals but the SOMO, as they are obtained in the calculations for the neutral systems, see the Supplementary
+%Information for details.}
 More interestingly, a very good agreement between reference and pseudo-systems is obtained for TD-DFT
 calculations (for the $\pi-\pi^*$ excitation), which suggests that the virtual space is of good
 quality.
