Changing computational details + molcas

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -169,6 +169,30 @@ carbon-containing dimers},
   pages = {727--733}
 }
 
+@article{MOLCAS,
+Author = {Aquilante, Francesco and Autschbach, Jochen and Carlson, Rebecca K. and
+   Chibotaru, Liviu F. and Delcey, Mickael G. and De Vico, Luca and Galvan,
+   Ignacio Fdez and Ferre, Nicolas and Frutos, Luis Manuel and Gagliardi,
+   Laura and Garavelli, Marco and Giussani, Angelo and Hoyer, Chad E. and
+   Li Manni, Giovanni and Lischka, Hans and Ma, Dongxia and Malmqvist, Per
+   Ake and Mueller, Thomas and Nenov, Artur and Olivucci, Massimo and
+   Pedersen, Thomas Bondo and Peng, Daoling and Plasser, Felix and
+   Pritchard, Ben and Reiher, Markus and Rivalta, Ivan and Schapiro, Igor
+   and Segarra-Marti, Javier and Stenrup, Michael and Truhlar, Donald G.
+   and Ungur, Liviu and Valentini, Alessio and Vancoillie, Steven and
+   Veryazov, Valera and Vysotskiy, Victor P. and Weingart, Oliver and
+   Zapata, Felipe and Lindh, Roland},
+Title = {{Molcas 8: New capabilities for multiconfigurational quantum chemical
+   calculations across the periodic table}},
+Journal = {J. Comp. Chem.},
+Year = {2016},
+Volume = {37},
+Number = {5},
+Pages = {506--541},
+Month = {{FEB 15}},
+DOI = {{10.1002/jcc.24221}}
+}
+
 @book{TURBOMOLE,
      title = {TURBOMOLE V7.1 2016},
      year = 2016,
