Updated Journal labels... Oops.

--- a/main.tex
+++ b/main.tex
@@ -653,7 +653,7 @@ The critical paths are drawn in yellow.}
 \baselineskip = .5\baselineskip
 Figure 1 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
@@ -669,7 +669,7 @@ J.\ Comput.\ Chem.
 \baselineskip = .5\baselineskip
 Figure 2 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
@@ -687,7 +687,7 @@ J.\ Comput.\ Chem.
 \baselineskip = .5\baselineskip
 Figure 3 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
@@ -705,7 +705,7 @@ J.\ Comput.\ Chem.
 \baselineskip = .5\baselineskip
 Figure 4 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
@@ -724,7 +724,7 @@ J.\ Comput.\ Chem.
 \baselineskip = .5\baselineskip
 Figure 5 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
@@ -741,7 +741,7 @@ J.\ Comput.\ Chem.
 \baselineskip = .5\baselineskip
 Figure 6 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
@@ -767,7 +767,7 @@ All-electron & Pseudo-potential\\
 \baselineskip = .5\baselineskip
 Figure 7 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
@@ -784,7 +784,7 @@ J.\ Comput.\ Chem.
 \baselineskip = .5\baselineskip
 Figure 8 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
@@ -801,7 +801,7 @@ J.\ Comput.\ Chem.
 \baselineskip = .5\baselineskip
 Figure 9 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
@@ -817,7 +817,7 @@ J.\ Comput.\ Chem.
 \baselineskip = .5\baselineskip
 Figure 10 \\
 Alexander Punter, Paola Nava, Yannick Carissan\\
-J.\ Comput.\ Chem.
+Int. J. Quantum Chem.
 \end{minipage}
 }
 \end{figure}
