add helicene data

--- a/main.tex
+++ b/main.tex
@@ -795,7 +795,7 @@ Int. J. Quantum Chem.
 \begin{figure}
 
 \begin{center}
-\includegraphics[angle=-90,width=8cm]{helicene_uv_ecd.eps}
+\includegraphics[width=8cm]{helicene_uv_ecd.eps}
 \end{center}
 {\Large
 \begin{minipage}[t]{3in}
