--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -298,6 +298,189 @@ framework. The pseudo-molecule wavelength has been corrected by a 32nm shift.}
 \label{fig:helicene_spectra_b3lyp}
 \end{figure}
 
+\section*{Example Turbomole Input: Benzene}
+
+Below are included example coord, control and basis files for the running of a Turbomole Hartree-Fock calculation for benzene using our pseudo-potential setup.
+
+\subsection*{Coordinate File}
+
+\begin{verbatim}
+$coord
+   -1.31298477814784     -2.27380782895095      0.00000000000000      c
+    1.31271887734650     -2.27406756797785      0.00000000000000      c
+    2.62572250864618     -0.00015699191647      0.00000000000000      c
+    1.31296575771871      2.27390545849672      0.00000000000000      c
+   -1.31275152697941      2.27391013306058      0.00000000000000      c
+   -2.62567056810716      0.00004443038124      0.00000000000000      c
+   -1.56296714967000     -1.84078494973000     -0.25000000000000      h
+   -1.56296714967000     -1.84078494973000      0.25000000000000      h
+   -0.81298477856200     -2.27382818432000     -0.25000000000000      h
+   -0.81298477856200     -2.27382818432000      0.25000000000000      h
+   -1.56300240621000     -2.70681035280000     -0.25000000000000      h
+   -1.56300240621000     -2.70681035280000      0.25000000000000      h
+    0.81271887979300     -2.27401810714000     -0.25000000000000      h
+    0.81271887979300     -2.27401810714000      0.25000000000000      h
+    1.56276171047000     -1.84107959863000     -0.25000000000000      h
+    1.56276171047000     -1.84107959863000      0.25000000000000      h
+    1.56267604178000     -2.70710499817000     -0.25000000000000      h
+    1.56267604178000     -2.70710499817000      0.25000000000000      h
+    2.37569955168000     -0.43315643878900     -0.25000000000000      h
+    2.37569955168000     -0.43315643878900      0.25000000000000      h
+    2.37574546631000      0.43286896377800     -0.25000000000000      h
+    2.37574546631000      0.43286896377800      0.25000000000000      h
+    3.12572250794000     -0.00018350073873     -0.25000000000000      h
+    3.12572250794000     -0.00018350073873      0.25000000000000      h
+    0.81296575772000      2.27390634865000      0.25000000000000      h
+    0.81296575772000      2.27390634865000     -0.25000000000000      h
+    1.56296498683000      1.84089231153000      0.25000000000000      h
+    1.56296498683000      1.84089231153000     -0.25000000000000      h
+    1.56296652861000      2.70691771531000      0.25000000000000      h
+    1.56296652861000      2.70691771531000     -0.25000000000000      h
+   -1.56276610383000      1.84090584745000      0.25000000000000      h
+   -1.56276610383000      1.84090584745000     -0.25000000000000      h
+   -0.81275152726300      2.27389330100000      0.25000000000000      h
+   -0.81275152726300      2.27389330100000     -0.25000000000000      h
+   -1.56273694984000      2.70693125074000      0.25000000000000      h
+   -1.56273694984000      2.70693125074000     -0.25000000000000      h
+   -2.37568819658000     -0.43297844883900      0.25000000000000      h
+   -2.37568819658000     -0.43297844883900     -0.25000000000000      h
+   -2.37565294004000      0.43304695422800      0.25000000000000      h
+   -2.37565294004000      0.43304695422800     -0.25000000000000      h
+   -3.12567056769000      0.00006478575459      0.25000000000000      h
+   -3.12567056769000      0.00006478575459     -0.25000000000000      h
+$end
+
+\end{verbatim}
+\subsection*{Control File}
+
+\begin{verbatim}
+$title
+$operating system unix
+$symmetry cs
+$user-defined bonds    file=coord
+$coord    file=coord
+$optimize
+ internal   off
+ redundant  off
+ cartesian  on
+ global     off
+ basis      off
+$atoms
+c  1-6                               \
+   basis =c def-SV(P)                \
+   ecp   =c ecp-p
+h  7-42                              \
+   basis =none                       \ 
+   ecp   =h ecp-s 
+$basis    file=basis 
+$ecp    file=basis 
+$rundimensions 
+   dim(fock,dens)=4221 
+   natoms=42 
+   nshell=36 
+   nbf(CAO)=90 
+   dim(trafo[SAO<-->AO/CAO])=102 
+   nbf(AO)=84 
+$scfiterlimit       30 
+$scfconv        7 
+$thize     0.10000000E-04 
+$thime        5 
+$scfdamp   start=1.000  step=0.050  min=0.100 
+$scfdump 
+$scfintunit 
+ unit=30       size=0        file=twoint 
+$scfdiis 
+$maxcor    500 MiB  per_core 
+$scforbitalshift  closedshell=.4 
+$drvopt 
+   cartesian  on 
+   basis      off 
+   global     off 
+   hessian    on 
+   dipole     on 
+   nuclear polarizability 
+$interconversion  off 
+   qconv=1.d-7 
+   maxiter=25 
+$coordinateupdate 
+   dqmax=0.3 
+   interpolate  on 
+   statistics    5 
+$forceupdate 
+   ahlrichs numgeo=0  mingeo=3 maxgeo=4 modus=<g|dq> dynamic fail=0.3 
+   threig=0.005  reseig=0.005  thrbig=3.0  scale=1.00  damping=0.0 
+$forceinit on 
+   diag=default 
+$energy    file=energy 
+$grad    file=gradient 
+$forceapprox    file=forceapprox 
+$last step     define 
+$scfmo none file=mos 
+$closed shells 
+ a" 1-3 (2) 
+$end 
+
+\end{verbatim}
+
+\subsection*{Control File}
+
+\begin{verbatim}
+$basis
+*
+c def-SV(P)
+# c     (7s4p1d) / [3s2p1d]     {511/31/1}
+*
+   5  s
+  1238.4016938      0.54568832082E-02
+  186.29004992      0.40638409211E-01
+  42.251176346      0.18025593888
+  11.676557932      0.46315121755
+  3.5930506482      0.44087173314
+   1  s
+ 0.40245147363       1.0000000000
+   1  s
+ 0.13090182668       1.0000000000
+   3  p
+  9.4680970621      0.38387871728E-01
+  2.0103545142      0.21117025112
+ 0.54771004707      0.51328172114
+   1  p
+ 0.15268613795       1.0000000000
+   1  d
+ 0.80000000000       1.0000000000
+*
+$ecp
+*
+c ecp-p
+*
+  ncore =     5           lmax =     3
+#        coefficient   r^n          exponent
+f
+           0.0000000    2           1.0000000
+s-f
+           0.0000000    1           0.0000000
+p-f
+          -3.9096200    1           0.6244619
+d-f
+           0.0000000    1           0.0000000
+*
+h ecp-s
+*
+  ncore =     1           lmax =     3
+#        coefficient   r^n          exponent
+f
+           0.0000000    2           1.0000000
+s-f
+           1.5000000    1           0.5000000
+p-f
+           0.0000000    1           0.0000000
+d-f
+           0.0000000    1           0.0000000
+*
+$end
+
+\end{verbatim}
+
 \clearpage
 
 \bibliography{biblio_pseudo_alex}
