--- a/main.tex
+++ b/main.tex
@@ -795,7 +795,7 @@ Int. J. Quantum Chem.
 \begin{figure}
 
 \begin{center}
-\includegraphics[width=8cm]{helicene_uv_ecd.eps}
+\includegraphics[width=8cm]{helicene_uv_ecd}
 \end{center}
 {\Large
 \begin{minipage}[t]{3in}
@@ -833,13 +833,13 @@ Int. J. Quantum Chem.
 System & coeff. & exp & coeff. & exp. & HOMO & $\Delta_{ST}$ & 1$^{st}$ Ionisation \\
 \hline
 ref. CH$^{\bullet}_{3}$ & - & - & - & - & -10.537 & - & - \\
-ref. C$_{2}$H$_{4}$ & - & - & - & - & -10.363 & -3.522 & -9.091 \\
+ref. C$_{2}$H$_{4}$ & - & - & - & - & -10.363 & -3.522 & 9.091 \\
 \hline
 initial pseudo-CH$^{\bullet}_{3}$ & -3.268 & 0.295 & 10.381 & 10.000 & -10.537 & - & - \\
-initial pseudo-C$_{2}$H$_{4}$ & -3.268 & 0.295 & 10.381 & 10.000 & -14.061 & -9.214 & -14.021\\
+initial pseudo-C$_{2}$H$_{4}$ & -3.268 & 0.295 & 10.381 & 10.000 & -14.061 & -9.214 & 14.021\\
 \hline
 final pseudo-CH$^{\bullet}_{3}$ & -3.910 & 0.624 & 1.500 & 0.500 & -10.000 & - & - \\
-final pseudo-C$_{2}$H$_{4}$ & -3.910 & 0.624 & 1.500 & 0.500 & -10.062 & -3.533 & -9.806 \\
+final pseudo-C$_{2}$H$_{4}$ & -3.910 & 0.624 & 1.500 & 0.500 & -10.062 & -3.533 & 9.806 \\
 \hline
 \end{tabular}
 \end{table}
