add croped images

--- a/main.tex
+++ b/main.tex
@@ -830,6 +830,21 @@ Int. J. Quantum Chem.
 }
 \end{figure}
 
+\end{figure}
+\begin{figure}
+\begin{center}
+\includegraphics[width=4cm]{trans_55_crop.eps}\includegraphics[width=4cm]{trans_59_crop.eps}
+\end{center}
+{\Large
+\begin{minipage}[t]{3in}
+\baselineskip = .5\baselineskip
+Figure 11 \\
+Alexander Punter, Paola Nava, Yannick Carissan\\
+Int. J. Quantum Chem.
+\end{minipage}
+}
+\end{figure}
+
 \clearpage
 
 \begin{table}[h]
