add croped images

--- a/main.tex
+++ b/main.tex
@@ -830,7 +830,8 @@ Int. J. Quantum Chem.
 }
 \end{figure}
 
-\end{figure}
+\clearpage
+
 \begin{figure}
 \begin{center}
 \includegraphics[width=4cm]{trans_55_crop.eps}\includegraphics[width=4cm]{trans_59_crop.eps}
