Added new references and full Hamiltonian equation

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -18,6 +18,42 @@
   pages = {479-508}
 }
 
+@article{cao_2011,
+  volume = {1},
+  journal = {WIREs Comput Mol Sci},
+  author = {Dolg, Michael and Cao, Xiaoyan},
+  title = {Pseudopotentials and modelpotentials},
+  year = {2011},
+  pages = {200–210}
+}
+
+@article{seino_2014,
+  volume = {592},
+  journal = {Chem. Phys. Lett.},
+  author = {Seino, Junji and Tarumi, Moto and Nakai, Hiromi},
+  title = {Frozen core potential scheme with a relativistic electronic Hamiltonian: Theoretical connection between the model potential and all-electron treatments},
+  year = {2014},
+  pages = {341}
+}
+
+@article{huzinaga_1987,
+  volume = {60},
+  journal = {J. Chem. Phys.},
+  author = {Huzinaga, Sigeru and Seijo, Luis and Barandiarán, Zoila and Klobukowski, Mariusz},
+  title = {The ab initio model potential method. Main group elements},
+  year = {1974},
+  pages = {2779}
+}
+
+@article{bonifacic_1974,
+  volume = {86},
+  journal = {J. Chem. Phys.},
+  author = {Bonifacic, V. and Huzinaga, S.},
+  title = {Atomic and molecular calculations with the model potential method. I},
+  year = {1987},
+  pages = {2132}
+}
+
 @article{gresh_1978,
   volume = {49},
   journal = {Theoret. Chim. Acta.},
