--- a/main.tex
+++ b/main.tex
@@ -127,17 +127,20 @@ between explicitly treated active electrons, and
 the mono-electronic operator:
 \begin{equation}
 \label{eq:monoElectronicOperator}
-\hat{h}(i) = -\frac{1}{2}\Delta_i - \frac{(Z-Z_c)}{r_i}+\hat{V}(i) + \hat{\sigma}(i)
+\hat{h}(i) = -\frac{1}{2}\Delta_i - \frac{(Z-Z_c)}{r_i}+ \hat{W}
+%\hat{V}(i) + \hat{\sigma}(i)
 \end{equation}
 where $\Delta_i$ is the Laplacian of the coordinates of electron $i$, and 
 $Z_C$ is the number of dormant electrons withdrawn from the reference system.
-The operator $\hat{\sigma}(i)$ is the no-collapse term that prevents active electrons
-collapsing into the dormant region. The operator $\hat{V}(i)$ reproduces the 
+The operator $\hat{W}$ contains two terms:
+the operator $\hat{\sigma}$ is the no-collapse term that prevents active electrons
+collapsing into the dormant region; the operator $\hat{V}$ reproduces the 
 Coulomb and exchange interactions, for which Huzinaga proposed a spectral formulation:
-\begin{equation}
+\begin{eqnarray}
 \label{eq:HuzinagaMPVersion1Potential}
-\hat{V} = r^{-1}\left[\sum_IA_I\exp(-\alpha_I r^2)+\sum_JB_Jr\exp(-\beta_J r^2)\right]
-\end{equation}
+\hat{W} &=& \hat{\sigma}+\hat{V}  \nonumber \\
+\hat{V} &=& r^{-1}\left[\sum_IA_I\exp(-\alpha_I r^2)+\sum_JB_Jr\exp(-\beta_J r^2)\right]
+\end{eqnarray}
 
 In this article, we performed the active/inactive split on a molecule with $\pi$ electrons: the $\sigma$ electrons comprising the inactive part and the $\pi$ electrons the active part.
 The Schr\"odinger equation was solved for the latter part only in the field of the dormant part.
